<resources>
    <string name="app_name">weatherForecast</string>
    <string name="welcomemsg">Welcome To Weather App</string>
    <string name="emailid">Email</string>
    <string name="userpassword">Password</string>
    <string name="login">Login</string>
    <string name="registeruser">SignUp</string>
    <string name="signUp">"Register "</string>
    <string name="back">"Login "</string>
    <string name="userfullName">Full Name</string>
    <string name="age">Age</string>
    <string name="mobileNumber">Mobile</string>
    <string name="userpassoword">Password</string>
    <string name="confirmPassword">Retype password</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="default_notification_channel_id">122</string>
    <string name="skip"><u>Skip</u></string>
</resources>
